single-master-k8s/examples/aws_lb/svc_echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 80
