single-master-k8s/examples/aws_lb/svc_nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 80
