single-master-k8s/examples/aws_lb/ingress_ALB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
